# amanzi

./: .gitignore  .gitmodules  .hgignore  .travis.yml  CMakeLists.txt  COPYRIGHT  COPYRIGHT.md  CTestConfig.cmake  INSTALL  INSTALL.md  INSTALL_ATS.md  README  README.md  Theis.tex  UserGuide  _images  _sources  _static  amanzi_bootstrap.sh  bootstrap.sh  build_ATS_generic.sh  configure-ats.sh  configure-tama-debug.sh  configure-tama-release.sh  do-configure  downloads.html  fix-rpath.sh  genindex.html  index.html  objects.inv  search.html  searchindex.js  sedfoo.sh  sedfoo2.sh  sedfoo3.sh  versions.json
config/SuperBuild/: Build_CURL.cmake  Build_METIS.cmake  Build_zlib.cmake  CMakeLists.txt  INSTALL  TPLVersions.cmake
config/ToolsBuild/: CMakeLists.txt
src/: .clang-format  CMakeLists.txt  sedfoo_mesh.sh  sedfoo_tpetra.sh
src/ats_solvers/: CMakeLists.txt  NonlinarKrylovAccelerator.cc  NonlinarKrylovAccelerator.hh
src/boundary_conditions/: CMakeLists.txt  Evaluator_types.hh  Function_types.hh
src/chemistry/: CMakeLists.txt  Chemistry_PK.cpp  Chemistry_PK.hpp  Chemistry_State.hpp  Makefile  makefile
src/chemistry_pk/: CMakeLists.txt  ChemistryEngine.cc  ChemistryEngine.hh  Chemistry_Engine.cc  Chemistry_Engine.hh  Chemistry_PK_Wrapper.cc  Chemistry_State.cc  Chemistry_State.hh  GeochemicalConditionContext.cc  GeochemicalConditionContext.hh  alquimia_chemistry_pk.cc  alquimia_chemistry_pk.hh  chemistry_pk.cc  chemistry_pk.hh  chemistry_pk_base.hh  chemistry_state.cc  chemistry_state.hh
src/constitutive_relations/: CMakeLists.txt
src/coordinator/: CMakeLists.txt  Coordinator.cc  Coordinator.hh  Unstructured_observations.cc  coordinator.cc  coordinator.hh  unstructured_observations.cc  unstructured_observations.hh
src/data_structures/: AmanziBelosMVWrapper.hh  BCs.hh  BlockSpace.cc  BlockSpace.hh  BlockVector.cc  BlockVector.hh  BlockVector_decl.hh  BlockVector_impl.hh  CMakeLists.txt  CSR.hh  CompMap.cc  CompMap.hh  CompVector.hh  CompVector_decl.hh  CompVector_impl.hh  CompositeMap.cc  CompositeMap.hh  CompositeMatrix.hh  CompositeSpace.cc  CompositeSpace.hh  CompositeVector.cc  CompositeVector.hh  CompositeVectorSpace.cc  CompositeVectorSpace.hh  CompositeVector_Tpetra.cc  CompositeVector_decl.hh  CompositeVector_impl.hh  DataStructuresHelpers.cc  DataStructuresHelpers.hh  DenseMatrix_Vector.hh  DenseVector_Vector.hh  EpetraMatrix.hh  Epetra_Vector_Factory.hh  FlatVector.cc  FlatVector.hh  GraphFE.cc  GraphFE.hh  MatrixFE.cc  MatrixFE.hh  NoxVector.cc  (+33 more)
src/dbc/: CMakeLists.txt  dbc.cc  dbc.hh
src/debug/: CMakeLists.txt  DataDebug.cc  DataDebug.hh  InputAnalysis.cc  InputAnalysis.hh
src/discretization/: MimeticDiscretization.cc  MimeticDiscretization.hh
src/driver/: AmanziUnstructuredGridSimulationDriver.cc  AmanziUnstructuredGridSimulationDriver.hh  CMakeLists.txt  amanzi-demo-driver.cpp  options-fbasin-400.xml  options.xml
src/error_handling/: CMakeLists.txt  dbc.cc  dbc.hh  errors.cc  errors.hh  exceptions.cc  exceptions.hh  message.hh
src/executables/: AmanziUnstructuredGridSimulationDriver.cc  AmanziUnstructuredGridSimulationDriver.hh  CMakeLists.txt  VerifyDeform.cc  VerifyHex.cc  VerifyMesh.cc  amanzi-alt-driver.cpp  amanzi-demo-driver.cpp  amanzi-new-driver.cc  amanzi-new-driver.cpp  amanzi_unstructured_grid_simulation_driver.cc  amanzi_unstructured_grid_simulation_driver.cpp  amanzi_unstructured_grid_simulation_driver.hh  amanzi_unstructured_grid_simulation_driver.hpp  ats_mesh_factory.cc  ats_mesh_factory.hh  concat.cc  const_temp.xml  coordinator.cc  coordinator.hh  main.cc  main.f90  options.xml  plant_1D_mesh.cc  plant_1D_mesh.hh  simulation_driver.cc  simulation_driver.hh  splitexo.sh  stk_mesh_test_hex.cc  test.cc  test_clm_driver.cc  verify_deform.cc  verify_hex.cc  verify_mesh.cc  verify_moab_mesh.cc  verify_stk_mesh.cc
src/exodus/: CMakeLists.txt  Exodus_error.hh  Exodus_file.cc  Exodus_file.hh  Exodus_readers.cc  Exodus_readers.hh  Exodus_records.cc  Exodus_records.hh  Parallel_Exodus_file.cc  Parallel_Exodus_file.hh
src/factory/: factory.hh  factory_with_state.hh
src/flow/: CMakeLists.txt  DarcyMatvec.cpp  DarcyMatvec.hpp  DarcyProblem.cpp  DarcyProblem.hpp  Darcy_AztecOO.cc  Darcy_AztecOO.cpp  Darcy_BC_Head.cpp  Darcy_IO.cc  Darcy_IO.cpp  Darcy_LinearOperator.cc  Darcy_PK.cc  Darcy_PK.cpp  Darcy_PK.hh  Darcy_PK.hpp  Darcy_TI.cc  Darcy_TI.cpp  Darcy_problem.cpp  Darcy_problem.hpp  DiffusionMap.cpp  DiffusionMap.hpp  DiffusionMatrix.cpp  DiffusionMatrix.hpp  DiffusionPrecon.cpp  DiffusionPrecon.hpp  FlowBC.cpp  FlowBC.hpp  FlowBoundaryFunction.cc  FlowBoundaryFunction.hh  FlowDefs.hh  FlowDomainFunction.cc  FlowDomainFunction.hh  FlowTypeDefs.hh  Flow_AuxData.cc  Flow_BC_Actions.cc  Flow_BC_Actions.cpp  Flow_BC_Factory.cc  Flow_BC_Factory.cpp  Flow_BC_Factory.hh  Flow_BC_Factory.hpp  (+144 more)
src/functions/: AdditiveFunction.hh  BilinearFunction.cc  BilinearFunction.hh  CMakeLists.txt  ColorFunction.hh  ColorFunctionFactory.cc  ColorFunctionFactory.hh  CompositionFunction.hh  ConstantFunction.hh  DistanceFunction.cc  DistanceFunction.hh  FUNCTION-FILE-FORMAT.txt  Function.hh  FunctionAdditive.hh  FunctionBilinear.cc  FunctionBilinear.hh  FunctionBilinearAndTime.cc  FunctionBilinearAndTime.hh  FunctionColor.hh  FunctionColorFactory.cc  FunctionColorFactory.hh  FunctionComposition.hh  FunctionConstant.hh  FunctionDistance.cc  FunctionDistance.hh  FunctionExprTK.cc  FunctionExprTK.hh  FunctionFactory.cc  FunctionFactory.hh  FunctionGridColor.cc  FunctionGridColor.hh  FunctionLinear.cc  FunctionLinear.hh  FunctionMonomial.cc  FunctionMonomial.hh  FunctionMultiplicative.hh  FunctionPointer.cc  FunctionPointer.hh  FunctionPolynomial.cc  FunctionPolynomial.hh  (+73 more)
src/geometry/: BoxRegion.cc  BoxRegion.hh  CMakeLists.txt  ColorFunctionRegion.cc  ColorFunctionRegion.hh  Domain.cc  Domain.hh  EnumeratedSetRegion.cc  EnumeratedSetRegion.hh  GeometricModel.cc  GeometricModel.hh  Geometry.cc  Geometry.hh  GeometryDefs.hh  LabeledSetRegion.cc  LabeledSetRegion.hh  LogicalRegion.cc  LogicalRegion.hh  PlaneRegion.cc  PlaneRegion.hh  Point.cc  Point.hh  (+45 more)
(+12402 files in other folders)
