# -*- mode: cmake -*-

add_subdirectory(error_handling)
add_subdirectory(utils)
add_subdirectory(functions)
add_subdirectory(geometry)
add_subdirectory(mesh)
add_subdirectory(whetstone)
add_subdirectory(data_structures)
add_subdirectory(mesh_functions)
add_subdirectory(output)
add_subdirectory(solvers)
add_subdirectory(time_integration)
add_subdirectory(operators)
add_subdirectory(state)
add_subdirectory(pks)


